--- a/app.json
+++ b/app.json
@@ -3,7 +3,8 @@
     "pages/movie/movie",
     "pages/movie/search/search",
     "pages/movie/movie-more/movie-more",
-    "pages/movie/selected/selected"
+    "pages/movie/selected/selected",
+    "pages/movie/movie-detail/movie-detail"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
