--- a/app.json
+++ b/app.json
@@ -5,7 +5,8 @@
     "pages/movie/movie-more/movie-more",
     "pages/movie/selected/selected",
     "pages/movie/movie-detail/movie-detail",
-    "pages/movie/movie-detail/movie-poster/movie-poster"
+    "pages/movie/movie-detail/movie-poster/movie-poster",
+    "pages/movie/movie-detail/celebrity/celebrity"
   ],
   "window": {
     "navigationBarBackgroundColor": "#ffffff",
